objects/Confidential_Case_Team_History__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Case_Confidential_Information__c</fullName>
        <label>Case Confidential Information</label>
        <referenceTo>Case_Confidential_Information__c</referenceTo>
        <relationshipLabel>Confidential Case Team History</relationshipLabel>
        <relationshipName>Confidential_Case_Team_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Confidential_Case_Team_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Confidential Case Team History</label>
    <nameField>
        <displayFormat>CCTH-{00000000}</displayFormat>
        <label>Confidential Case Team History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Confidential Case Team History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>